fixed alignment of donut charts

--- a/app/assets/stylesheets/almviz.css.scss
+++ b/app/assets/stylesheets/almviz.css.scss
@@ -181,6 +181,11 @@
 	vertical-align: middle;
 }
 
+.donut {
+  display: block;
+  margin: auto;
+}
+
 .chart div {
   background-color: white;
   text-align: right;
